--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
         <div class="row">
             <div class="col-12 col-6-lg">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                <button class="btn btn-primary col-6" type="button">AC</button>
-                <button class="btn btn-primary col-3" type="button">C</button>
+                <button class="btn  col-6" type="button">AC</button>
+                <button class="btn  col-3" type="button">C</button>
                 </div>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <button class="btn btn-primary col-3" type="button">7</button>
-                    <button class="btn btn-primary col-3" type="button">8</button>
-                    <button class="btn btn-primary col-3" type="button">9</button>
+                    <button class="btn  col-3" type="button">7</button>
+                    <button class="btn  col-3" type="button">8</button>
+                    <button class="btn  col-3" type="button">9</button>
                 </div>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <button class="btn btn-primary col-3" type="button">4</button>
-                    <button class="btn btn-primary col-3" type="button">5</button>
-                    <button class="btn btn-primary col-3" type="button">6</button>
+                    <button class="btn  col-3" type="button">4</button>
+                    <button class="btn  col-3" type="button">5</button>
+                    <button class="btn  col-3" type="button">6</button>
                 </div>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <button class="btn btn-primary col-3" type="button">1</button>
-                    <button class="btn btn-primary col-3" type="button">2</button>
-                    <button class="btn btn-primary col-3" type="button">3</button>
+                    <button class="btn  col-3" type="button">1</button>
+                    <button class="btn  col-3" type="button">2</button>
+                    <button class="btn  col-3" type="button">3</button>
                 </div>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                <button class="btn btn-primary col-6" type="button">0</button>
-                <button class="btn btn-primary col-3" type="button">.</button>
+                <button class="btn  col-6" type="button">0</button>
+                <button class="btn  col-3" type="button">.</button>
                 </div>
             </div>
         </div>
