--- a/index.html
+++ b/index.html
@@ -12,38 +12,39 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4 text-center">
-                <div class="previous-operand">hello</div>
-                <div class="current-operand">hello</div>
+                <div previous-operand class="previous-operand"></div>
+                <div current-operand class="current-operand"></div>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-lg-4" id="buttons">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                <button class="btn  col-9" type="button">AC</button>
-                <button class="btn  col-3" type="button">C</button>
+                <button data-all-clear class="btn  col-6" type="button">AC</button>
+                <button data-delete class="btn  col-3" type="button">C</button>
+                <button data-operation class="btn  col-3" type="button">/</button>
                 </div>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <button class="btn  col-3" type="button">7</button>
-                    <button class="btn  col-3" type="button">8</button>
-                    <button class="btn  col-3" type="button">9</button>
-                    <button class="btn  col-3" type="button">/</button>
+                    <button data-number class="btn  col-3" type="button">7</button>
+                    <button data-number class="btn  col-3" type="button">8</button>
+                    <button data-number class="btn  col-3" type="button">9</button>
+                    <button data-operation class="btn  col-3" type="button">*</button>
                 </div>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <button class="btn  col-3" type="button">4</button>
-                    <button class="btn  col-3" type="button">5</button>
-                    <button class="btn  col-3" type="button">6</button>
-                    <button class="btn  col-3" type="button">*</button>
+                    <button data-number class="btn  col-3" type="button">4</button>
+                    <button data-number class="btn  col-3" type="button">5</button>
+                    <button data-number class="btn  col-3" type="button">6</button>
+                    <button data-operation class="btn  col-3" type="button">-</button>
                 </div>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <button class="btn  col-3" type="button">1</button>
-                    <button class="btn  col-3" type="button">2</button>
-                    <button class="btn  col-3" type="button">3</button>
-                    <button class="btn  col-3" type="button">-</button>
+                    <button data-number class="btn  col-3" type="button">1</button>
+                    <button data-number class="btn  col-3" type="button">2</button>
+                    <button data-number class="btn  col-3" type="button">3</button>
+                    <button data-operation class="btn  col-3" type="button">+</button>
                 </div>
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                <button class="btn  col-6" type="button">0</button>
-                <button class="btn  col-3" type="button">.</button>
-                <button class="btn  col-3" type="button">+</button>
+                <button data-number class="btn  col-6" type="button">0</button>
+                <button data-number class="btn  col-3" type="button">.</button>
+                <button data-equals class="btn  col-3" type="button">=</button>
                 </div>
             </div>
         </div>
